[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ark-ff = "0.4.2"
ark-serialize = { version = "0.4.2", features = ["derive"] }

[dev-dependencies]
ark-secp256k1 = "0.4.0"
