[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"
license="AGPL-3.0"
authors=["DanTehrani"]
repository="https://github.com/personaelabs/poseidon"
description = "Poseidon hash"

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ark-ff = "0.4.2"
ark-serialize = { version = "0.4.2", features = ["derive"] }

[dev-dependencies]
ark-secp256k1 = "0.4.0"
